--- a/FrontEndProjectWeb2/src/app/components/login/login.component.html
+++ b/FrontEndProjectWeb2/src/app/components/login/login.component.html
@@ -1,4 +1,15 @@
-<p>
-  login works!
-</p>
+<form [formGroup]="loginForm" (ngSubmit)="login()">
+  <label>
+    Username:
+    <input type="text" formControlName="username" required>
+  </label>
+
+  <label>
+    Password:
+    <input type="text" formControlName="password" required>
+  </label>
+
+  <button type="submit" [disabled]="!loginForm.valid" *ngIf="!authService.isLoggedIn">Login</button>
+  <button (click)="logout()" *ngIf="authService.isLoggedIn">Logout</button>
+</form>
 <button (click) = 'moveToRegisterComponent()'>Register</button>
