Added some new components, relating to unauthorized user :D

--- a/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
@@ -1,3 +1,4 @@
-<p>
-  unauthorized-nav-bar works!
-</p>
+<button (click) = "schedule()">Red Voznje</button>
+<button (click) = "lines()">Mreze linije</button>
+<button (click) = "vehicleLocation()">Lokacija vozila</button>
+<button (click) = "catalog()">Cenovnik</button>
