Added new components and some css classes to html tags.

--- a/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
@@ -1,4 +1,9 @@
-<button (click) = "schedule()">Red Voznje</button>
-<button (click) = "lines()">Mreze linije</button>
-<button (click) = "vehicleLocation()">Lokacija vozila</button>
-<button (click) = "catalog()">Cenovnik</button>
+<div class="bg-light border-right" id="sidebar-wrapper">
+<div class="sidebar-heading" >J G S P</div>
+<div class="list-group list-group-flush">
+    <a class="list-group-item list-group-item-action bg-light" (click) = "schedule()">Red Voznje</a>
+    <a class="list-group-item list-group-item-action bg-light" (click) = "lines()">Mreze linije</a>
+    <a class="list-group-item list-group-item-action bg-light" (click) = "vehicleLocation()">Lokacija vozila</a>
+    <a class="list-group-item list-group-item-action bg-light" (click) = "catalog()">Cenovnik</a>
+</div>
+</div>   
