--- a/FrontEndProjectWeb2/src/app/components/unauthorized-header/unauthorized-header.component.html
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-header/unauthorized-header.component.html
@@ -1,1 +1,11 @@
-<h2><button (click) = 'moveToLogInComponent()'>Log In</button></h2>
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">     
+   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+        <a class="nav-link" (click) = 'moveToLogInComponent()'>LogIn <span class="sr-only">(current)</span></a>
+        </li>
+    </ul>
+    </div>
+</nav>
+
+        
