--- a/FrontEndProjectWeb2/src/app/components/unauthorized-user/unauthorized-user.component.html
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-user/unauthorized-user.component.html
@@ -1,3 +1,9 @@
-<app-unauthorized-header></app-unauthorized-header>
-<app-unauthorized-nav-bar></app-unauthorized-nav-bar>
-<router-outlet></router-outlet>
+<div class="d-flex" id="wrapper">
+        <app-unauthorized-nav-bar></app-unauthorized-nav-bar>
+        <div id="page-content-wrapper" style="width: 100%;">
+                <app-unauthorized-header></app-unauthorized-header>
+                <div class="container-fluid">
+                    <router-outlet></router-outlet>
+                </div>
+        </div>
+</div>
