--- a/FrontEndProjectWeb2/src/app/components/authorized-user-header/authorized-user-header.component.html
+++ b/FrontEndProjectWeb2/src/app/components/authorized-user-header/authorized-user-header.component.html
@@ -1,9 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">     
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-         <li class="nav-item active">
-         <a class="nav-link" (click) = 'LogOut()'>LogOut <span class="sr-only">(current)</span></a>
-         </li>
-     </ul>
-     </div>
- </nav>
+<p>
+  authorized-user-header works!
+</p>
