--- a/FrontEndProjectWeb2/src/app/components/schedule/schedule.component.html
+++ b/FrontEndProjectWeb2/src/app/components/schedule/schedule.component.html
@@ -1,21 +1,23 @@
-<p>
-  Vrsta linije:
-</p>
-
-<select [(ngModel)]="selectedLineType" (change)="changeOfLineType()">
-    <option *ngFor="let lineType of values.LineTypes" [ngValue]="lineType">
-      {{lineType.Name}}
-    </option>
-</select>
-<p>
-  Vrsta reda voznje:
-</p>
-
-<select [(ngModel)]="selectedScheduleType" (change)="changeOfScheduleType()">
-    <option *ngFor="let scheduleType of values.ScheduleTypes" [ngValue]="scheduleType">
-      {{scheduleType.Name}}
-    </option>
-</select>
+<table>
+  <tbody>
+    <tr>
+      <td>Vrsta linije:</td>
+      <td><select [(ngModel)]="selectedLineType" (change)="changeOfLineType()">
+          <option *ngFor="let lineType of values.LineTypes" [ngValue]="lineType">
+            {{lineType.Name}}
+          </option>
+      </select></td>
+    </tr>
+    <tr>
+      <td>Vrsta reda voznje:</td>
+      <td><select [(ngModel)]="selectedScheduleType" (change)="changeOfScheduleType()">
+          <option *ngFor="let scheduleType of values.ScheduleTypes" [ngValue]="scheduleType">
+            {{scheduleType.Name}}
+          </option>
+      </select></td>
+    </tr>
+  </tbody>
+</table>
 
 <p>Linije:</p>
 <div>
@@ -24,4 +26,4 @@
 </ul>
 </div>
 
-<div>Rezultat odabranog: {{schedule.Departure}}</div>
+<div>{{schedule.Departure}}</div>
