Unauthorized user buying ticket.

--- a/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
@@ -4,6 +4,7 @@
     <a class="list-group-item list-group-item-action bg-light" (click) = "schedule()">Red Voznje</a>
     <a class="list-group-item list-group-item-action bg-light" (click) = "lines()">Mreze linije</a>
     <a class="list-group-item list-group-item-action bg-light" (click) = "vehicleLocation()">Lokacija vozila</a>
+    <a class="list-group-item list-group-item-action bg-light" (click) = "buyTicket()">Kupi kartu</a>
     <a class="list-group-item list-group-item-action bg-light" (click) = "catalog()">Cenovnik</a>
 </div>
 </div>   
