--- a/FrontEndProjectWeb2/src/app/components/register/register.component.html
+++ b/FrontEndProjectWeb2/src/app/components/register/register.component.html
@@ -1,4 +1,9 @@
-
+<div class="sidenav">
+  <div class="login-main-text">
+     <h2>JGSP<br> Stranica za prijavu</h2>
+     <p>Prijavi se ili se registruj da bi koristio nase usluge.</p>
+  </div>
+</div>
 <p>
   register works!
 </p>
