--- a/FrontEndProjectWeb2/src/app/components/admin-schedule/admin-schedule.component.css
+++ b/FrontEndProjectWeb2/src/app/components/admin-schedule/admin-schedule.component.css
@@ -1,4 +1,12 @@
+.sirina{
+    width: 200px
+}
+
 .btn-black{
     background-color: #000 !important;
     color: #fff;
+}
+
+td{
+    min-width: 70px;
 }
