--- a/FrontEndProjectWeb2/src/app/components/authorized-user-header/authorized-user-header.component.html
+++ b/FrontEndProjectWeb2/src/app/components/authorized-user-header/authorized-user-header.component.html
@@ -1,8 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">     
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+            <button class="nav-link" class="btn btn-secondary">Profil <span class="sr-only">(current)</span></button>
+        </li>
+        &nbsp;
          <li class="nav-item active">
-         <a class="nav-link" (click) = 'LogOut()'>LogOut <span class="sr-only">(current)</span></a>
+         <button class="nav-link" (click) = 'LogOut()' class="btn btn-secondary">Odjavi se <span class="sr-only">(current)</span></button>
          </li>
      </ul>
      </div>
