--- a/FrontEndProjectWeb2/src/app/components/login/login.component.html
+++ b/FrontEndProjectWeb2/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
                 <input type="text" formControlName="password" required class="form-control" placeholder="Password">
              </div>
              <button type="submit" [disabled]="!loginForm.valid" *ngIf="!authService.isLoggedIn" class="btn btn-black">Login</button>
-             <button (click) = 'moveToRegisterComponent()' class="btn btn-secondary">Register</button>
+             <button (click) = 'moveToRegisterComponent()' class="btn btn-secondary">Registruj se</button>
           </form>
        </div>
     </div>
