--- a/FrontEndProjectWeb2/src/app/components/unauthorized-header/unauthorized-header.component.html
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-header/unauthorized-header.component.html
@@ -2,7 +2,7 @@
    <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-        <a class="nav-link" (click) = 'moveToLogInComponent()'>LogIn <span class="sr-only">(current)</span></a>
+        <button class="nav-link" (click) = 'moveToLogInComponent()' class="btn btn-secondary">Prijavi se <span class="sr-only">(current)</span></button>
         </li>
     </ul>
     </div>
