--- a/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
@@ -2,8 +2,8 @@
   <div class="sidebar-heading" >J G S P</div>
   <div class="list-group list-group-flush">
       <a class="list-group-item list-group-item-action bg-light" (click) = "schedule()">Red Voznje</a>
-      <a class="list-group-item list-group-item-action bg-light" (click) = "lines()">Mreze linije</a>
-      <a class="list-group-item list-group-item-action bg-light" (click) = "vehicleLocation()">Lokacija vozila</a>
+      <a class="list-group-item list-group-item-action bg-light" (click) = "lines()">Linije</a>
+      <a class="list-group-item list-group-item-action bg-light" (click) = "vehicleLocation()">Stanice</a>
       <a class="list-group-item list-group-item-action bg-light" (click) = "buyTicket()">Kupi kartu</a>
       <a class="list-group-item list-group-item-action bg-light" (click) = "catalog()">Cenovnik</a>
   </div>
