--- a/FrontEndProjectWeb2/src/app/components/unauthorized-header/unauthorized-header.component.css
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-header/unauthorized-header.component.css
@@ -1,4 +1,8 @@
-.btn-black{
-    background-color: #000 !important;
-    color: #fff;
+.btn-black {
+  background-color: #000 !important;
+  color: #fff;
+}
+
+.navbar {
+  background-color: lightgrey !important;
 }
