--- a/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.css
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.css
@@ -1,8 +1,9 @@
 #sidebar-wrapper .sidebar-heading {
-    padding: 0.875rem 1.25rem;
-    font-size: 1.2rem;
-  }
+  padding: 0.875rem 1.25rem;
+  font-size: 1.2rem;
+}
 
-  .bg-light{
-    width: 250px;
+.bg-light {
+  background-color: lightgrey !important;
+  width: 250px;
 }
