--- a/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/unauthorized-nav-bar/unauthorized-nav-bar.component.html
@@ -1,10 +1,30 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
-<div class="sidebar-heading" >J G S P</div>
-<div class="list-group list-group-flush">
-    <a class="list-group-item list-group-item-action bg-light" (click) = "schedule()">Red Voznje</a>
-    <a class="list-group-item list-group-item-action bg-light" (click) = "lines()">Mreze linije</a>
-    <a class="list-group-item list-group-item-action bg-light" (click) = "vehicleLocation()">Lokacija vozila</a>
-    <a class="list-group-item list-group-item-action bg-light" (click) = "buyTicket()">Kupi kartu</a>
-    <a class="list-group-item list-group-item-action bg-light" (click) = "catalog()">Cenovnik</a>
+  <div class="sidebar-heading font-weight-bold">
+    <img src="assets/img/jgspns.png" alt="" height="110px" width="200px" />
+  </div>
+  <div class="list-group list-group-flush">
+    <a
+      class="list-group-item list-group-item-action bg-light"
+      (click)="schedule()"
+      >Red Voznje</a
+    >
+    <a class="list-group-item list-group-item-action bg-light" (click)="lines()"
+      >Mreze linije</a
+    >
+    <a
+      class="list-group-item list-group-item-action bg-light"
+      (click)="vehicleLocation()"
+      >Lokacija vozila</a
+    >
+    <a
+      class="list-group-item list-group-item-action bg-light"
+      (click)="buyTicket()"
+      >Kupi kartu</a
+    >
+    <a
+      class="list-group-item list-group-item-action bg-light"
+      (click)="catalog()"
+      >Cenovnik</a
+    >
+  </div>
 </div>
-</div>   
