--- a/FrontEndProjectWeb2/src/app/components/register/register.component.html
+++ b/FrontEndProjectWeb2/src/app/components/register/register.component.html
@@ -10,14 +10,14 @@
 <div class="main">
   <div class="col-md-8 col-sm-10">
     <div class="profile-form">
-      <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <form [formGroup]="registerForm" (ngSubmit)="registerUser()">
         <div class="form-group row">
           <label class="col-sm-4 col-form-label">E-mail adresa</label>
           <div class="col-sm-6">
             <div class="md-form mt-0">
               <input
-                type="text"
-                formControlName="username"
+                type="email"
+                formControlName="Email"
                 required
                 class="form-control"
                 placeholder="E-mail adresa"
@@ -30,8 +30,8 @@
           <div class="col-sm-6">
             <div class="md-form mt-0">
               <input
-                type="text"
-                formControlName="password"
+                type="password"
+                formControlName="Password"
                 required
                 class="form-control"
                 placeholder="Lozinka"
@@ -44,7 +44,7 @@
           <div class="col-sm-6">
             <div class="md-form mt-0">
               <input
-                type="text"
+                type="password"
                 formControlName="ConfirmPassword"
                 required
                 class="form-control"
@@ -109,11 +109,30 @@
             </div>
           </div>
         </div>
-
-        <button (click)="moveToRegisterComponent()" class="btn btn-black">
+        <div class="form-group row" style="margin-left: 220px; margin-top: 20px">
+          <div class="col-xs-10" style="width: 100px">
+            <div class="row">
+              <span>Regularan</span>
+              <input type="radio" name="PassengerType" value="Regularan" formControlName="PassengerType" checked="checked" class="form-control" />
+            </div>
+          </div>
+          <div class="col-xs-10" style="width: 100px">
+            <div class="row">
+              <span>Penzioner</span>
+              <input type="radio" name="PassengerType" value="Penzioner" formControlName="PassengerType" class="form-control" />
+            </div>
+          </div>
+          <div class="col-xs-10" style="width: 100px">
+            <div class="row">
+              <span>Djak/Student</span>
+              <input type="radio" name="PassengerType" value="Djak/Student" formControlName="PassengerType" class="form-control" />
+            </div>
+          </div>
+        </div>
+        <button type="submit" [disabled]="!registerForm.valid" class="btn btn-black">
           Registruj se
         </button>
-        <button class="btn btn-secondary">
+        <button class="btn btn-secondary" (click)="login()">
           Prijavi se
         </button>
       </form>
