Station crud done :D

--- a/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
@@ -13,7 +13,7 @@
     >
     <a
       class="list-group-item list-group-item-action bg-light"
-      (click)="vehicleLocation()"
+      (click)="stationLocation()"
       >Stanice</a
     >
     <a
