--- a/FrontEndProjectWeb2/src/app/components/lines/lines.component.html
+++ b/FrontEndProjectWeb2/src/app/components/lines/lines.component.html
@@ -1,3 +1,44 @@
 <p>
-  lines works!
+  <!-- Kreiramo mapu -->
+  <agm-map [latitude]="45.242268" [longitude]="19.842954" [zoom]="18">  
+
+      <agm-marker *ngFor="let station of stations" [latitude]="station.Latitude" [longitude]="station.Longitude" [iconUrl]="imageUrl">
+          <agm-info-window [latitude]="station.Latitude" [longitude]="station.Longitude">
+              <span>
+                Ime: {{station.Name}}
+              </span>
+              <br/>
+              <span>
+                Adresa: {{station.Address}}
+              </span>
+              <br/>
+              <span>
+                Linije:
+                <ng-container *ngFor="let linesStation of station.Lines">
+                {{linesStation.Number}}
+                </ng-container>
+              </span>
+            </agm-info-window>
+      </agm-marker>
+      <agm-polyline [strokeColor]="polyline.color">
+        <ng-container *ngFor="let polyline of polylines">
+          <agm-polyline-point *ngFor="let point of polyline.path" [latitude]="point.latitude" [longitude]="point.longitude">
+          </agm-polyline-point>
+          </ng-container>
+     </agm-polyline>
+      
+  </agm-map>
 </p>
+
+<table class="table table-condensed ">
+    <tbody>
+      <tr>
+        <td>Spisak linija:</td>
+        <td><select class="sirina" [(ngModel)]="selectedLine" (change)="changedLine()">
+            <option *ngFor="let sortedLine of sortedLines" [ngValue]="sortedLine">
+              {{sortedLine.Name}}
+            </option>
+        </select></td>
+      </tr>
+    </tbody>
+</table>
