--- a/FrontEndProjectWeb2/src/app/components/lines/lines.component.html
+++ b/FrontEndProjectWeb2/src/app/components/lines/lines.component.html
@@ -1,3 +1,6 @@
+<table>
+  <tr>
+    <td>
 <p>
   <!-- Kreiramo mapu -->
   <agm-map [latitude]="45.242268" [longitude]="19.842954" [zoom]="18">  
@@ -27,6 +30,8 @@
       
   </agm-map>
 </p>
+</td>
+<td>
 
 <table class="table table-condensed ">
     <tbody>
@@ -47,3 +52,10 @@
 <div *ngIf="role==='Admin'">
     <button (click)="changeLine()" >Izmeni</button>
 </div>
+
+<div *ngIf="role==='Admin'">
+    <button (click)="deleteLine()" >Obrisi</button>
+</div>
+</td>
+</tr>
+</table>
