Admin can register controller

--- a/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
@@ -26,5 +26,10 @@
       (click)="catalog()"
       >Cenovnik</a
     >
+    <a
+      class="list-group-item list-group-item-action bg-light"
+      (click)="controllor()"
+      >Dodaj kontrolora</a
+    >
   </div>
 </div>
