--- a/FrontEndProjectWeb2/src/app/components/controlor/controlor.component.html
+++ b/FrontEndProjectWeb2/src/app/components/controlor/controlor.component.html
@@ -1,3 +1,9 @@
-<p>
-  controlor works!
-</p>
+<div class="d-flex" id="wrapper">
+    <app-controlor-nav-bar></app-controlor-nav-bar>
+    <div id="page-content-wrapper" style="width: 100%;">
+            <app-authorized-user-header></app-authorized-user-header>
+            <div class="container-fluid">
+                <router-outlet></router-outlet>
+            </div>
+    </div>
+</div>
